Add GET /catalog/:id for getting the details of a single tape
